--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color switcher</title>
     <link rel="stylesheet" href="css/common.css" />
+    <style>
+      .timer {
+          text-align: center;
+      }
+      .field {
+          display: inline-block;
+          margin: 0 10px;
+      }
+      .value {
+          font-size: 24px;
+      }
+  </style>
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
