--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -6,16 +6,14 @@
     <title>Color switcher</title>
     <link rel="stylesheet" href="css/common.css" />
     <style>
-      .timer {
+      .button {
           text-align: center;
-      }
-      .field {
           display: inline-block;
           margin: 0 10px;
+      
+            font-size: 24px;
       }
-      .value {
-          font-size: 24px;
-      }
+      
   </style>
   </head>
   <body>
