--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -9,7 +9,7 @@
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    <form class="form">
+    <div class="form">
       <label>
         First delay (ms)
         <input type="number" name="delay" required />
@@ -23,7 +23,7 @@
         <input type="number" name="amount" required />
       </label>
       <button type="submit">Create promises</button>
-    </form>
+    </div>
 
     <script src="js/03-promises.js" type="module"></script>
   </body>
