--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -9,7 +9,7 @@
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    <div class="form">
+    <div class="form"  id="promise-form">
       <label>
         First delay (ms)
         <input type="number" name="delay" required />
@@ -24,7 +24,6 @@
       </label>
       <button type="submit">Create promises</button>
     </div>
-
-    <script src="js/03-promises.js" type="module"></script>
+   <script src="js/03-promises.js" type="module"></script>
   </body>
 </html>
