--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Promise generator</title>
     <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" hrfe="node_modules\notiflix\dist\notiflix-3.2.6.min.css">
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    <div class="form"  id="promise-form">
+    <div class="form">
       <label>
         First delay (ms)
         <input type="number" name="delay" required />
@@ -24,6 +25,9 @@
       </label>
       <button type="submit">Create promises</button>
     </div>
-   <script src="js/03-promises.js" type="module"></script>
+
+    <script src="js/03-promises.js" type="module"></script>
   </body>
 </html>
+
+
