--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,7 +6,7 @@
     <title>Promise generator</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" hrfe="node_modules\notiflix\dist\notiflix-3.2.6.min.css">
-  </head>
+    </head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
@@ -23,7 +23,7 @@
         Amount
         <input type="number" name="amount" required />
       </label>
-      <button type="submit">Create promises</button>
+      <button id="submit-button">Create promises</button>
     </div>
 
     <script src="js/03-promises.js" type="module"></script>
